--- a/src/components/Billing Screen/BillingScreen.module.css
+++ b/src/components/Billing Screen/BillingScreen.module.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 24rem;
+    width: 36rem;
     justify-content: space-between;
 }
 
@@ -124,4 +124,10 @@ submit-btn-wrapper {
     justify-content: space-between;
     flex-direction: row;
     margin-bottom: 0.5rem;
+}
+
+.patient-input-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
