--- a/src/components/LogIn Screen/LoginBox.module.css
+++ b/src/components/LogIn Screen/LoginBox.module.css
@@ -45,7 +45,6 @@
     box-sizing: border-box;
     width: 100%;
     height: 2.3rem;
-    margin-top: 0.8rem;
     padding: 0.3rem;
     border-radius: 0.2rem;
     border-width: 1px;
@@ -93,4 +92,24 @@
     color: rgb(192, 3, 3);
     background-color: rgba(236, 87, 87, 0.1);
     padding: 0.1rem 0.5rem;
+}
+
+.password-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 0.8rem;
+}
+
+.visibility-icon {
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    height: 100%;
+    margin-right: 0.5rem;
+}
+
+.visibility-icon ion-icon {
+    font-size: 1.2rem;
 }
