--- a/src/components/Billing Screen/BillInput/BillInput.module.css
+++ b/src/components/Billing Screen/BillInput/BillInput.module.css
@@ -131,11 +131,12 @@
 
 .invalid {
     color: red;
-    font-weight: 400;
+    font-size: 1rem;
+    /* font-weight: 200; */
     background-color: rgba(255, 118, 118, 0.16);
     padding: 0.3rem 1rem;
     border-radius: 0.2rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
