--- a/src/components/Billing Screen/BillTable.module.css
+++ b/src/components/Billing Screen/BillTable.module.css
@@ -2,3 +2,11 @@
     margin: 1.4rem;
     width: calc(100% - 2.8rem);
 }
+
+
+.spinner {
+    margin: -1rem 0;
+    padding: 0 calc(50% - 1.5rem);
+    width: 3rem;
+    height: 3rem;
+}
