--- a/src/components/Utils/Dynamic Dropdown Input/DynamicDropwdownInput.module.css
+++ b/src/components/Utils/Dynamic Dropdown Input/DynamicDropwdownInput.module.css
@@ -70,6 +70,7 @@
     background-color: var(--helper-color-2);
 }
 
+.btn-disabled,
 .btn-disabled:hover {
     background-color: var(--dark-color);
     cursor: no-drop;
